<resources>
    <string name="app_name">Simple Wallet</string>
    <string name="greetings">Welcome to Simple Wallet App</string>
    <string name="instructions">Add a value to compute incomes/outcomes</string>
    <string name="user_name">João da Silva</string>
    <string name="user_email">joao_da_silva@email.com</string>
    <string name="simple_wallet_icon">Simple Wallet Icon</string>
    <string name="not_implemented">Sorry, not implemented yet!</string>
    <string name="app_info">The Simple Wallet App was made by a beginner Android
        developer as learning tool of the platform. It will change (a lot).</string>


    <string name="insert_value_title">Inserting a value</string>
    <string name="main_activity_title">Simple Wallet App</string>
    <string-array name="fragments_titles">
        <item>Registered Values</item>
        <item>Graphs and figures</item>
        <item>About this App</item>
    </string-array>

    <string name="category">Category: </string>
    <string name="edit_text_hint">Write here</string>
    <string name="button_send">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_to_wallet_list">View details</string>
    <string name="button_date">Date </string>

    <string name="menu_drawer">Open drawer menu</string>
    <string name="menu_drawer_open">Open drawer menu</string>
    <string name="menu_drawer_close">Close drawer menu</string>
    <string name="drawer_header_profile_image">Profile image</string>
    <string name="item_view_list">Detail List</string>
    <string name="item_show_chart">Graphs</string>
    <string name="item_info">About this App</string>

    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
    <string name="sign_image_label">Value\'s sign</string>

    <string name="added">Value added!</string>
    <string name="no_date_input">No date selected</string>
    <string name="invalid_input">Invalid input</string>


    <string name="overview_table_label">Balance Summary</string>
    <string name="overview_table_income">Income Value:</string>
    <string name="overview_table_outcome">Outcome Value:</string>
    <string name="overview_table_balance">Balance:</string>

    <string name="add_value_fragment_tag">AddValueFragment</string>
    <string name="date_picker_fragment_tag">DatePickerFragment</string>
    <string name="fragment_overview_tag">OverviewFragment</string>
    <string name="fragment_wallet_list_tag">WalletListFragment</string>
    <string name="fragment_greetings_tag">GreetingsFragment</string>
    <string name="fragment_chart_tag">ChartFragment</string>
    <string name="fragment_app_info_tag">AppInfoFragment</string>

    <string-array name="category_tipes">
        <item>Salary</item>
        <item>Supermarket</item>
        <item>Gas</item>
        <item>Bill</item>
        <item>Entertainment</item>
        <item>Credit Card Fee</item>
    </string-array>

</resources>
