<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.carteirasimples.WalletOverviewFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/greetings"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="6dp"
        android:textSize="14sp"
        android:text="@string/greetings"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/summary_table"
        android:layout_alignParentStart="true"
        android:layout_below="@id/greetings"
        android:gravity="center">
        <TableRow>
            <TextView
                android:id="@+id/overview_label"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/overview_table_label"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_gravity="start"
                android:textStyle="bold"
                android:text="@string/overview_table_income"/>
            <TextView
                android:id="@+id/tv_income_value"
                android:layout_gravity="center"
                android:textColor="#74ba48"/> <!--green-->
        </TableRow>
        <TableRow>
            <TextView
                android:layout_gravity="start"
                android:textStyle="bold"
                android:text="@string/overview_table_outcome"/>
            <TextView
                android:id="@+id/tv_outcome_value"
                android:layout_gravity="center"
                android:textColor="#a00103"/> <!--red-->
        </TableRow>
        <TableRow>
            <TextView
                android:layout_gravity="start"
                android:textStyle="bold"
                android:text="@string/overview_table_balance"/>
            <TextView
                android:id="@+id/tv_balance_value"
                android:layout_gravity="center"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button_to_wallet_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_to_wallet_list"
        android:gravity="center"
        android:layout_below="@id/summary_table"/>

</RelativeLayout>
