<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.carteirasimples.AddValueFragment">

    <TextView
        android:id="@+id/add_value_tv_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instructions"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_value_tv_instructions"
        android:layout_alignParentStart="true"
        android:hint="@string/edit_text_hint"
        android:id="@+id/add_value_et"
        android:inputType="numberDecimal"
        android:maxLength="8"/>

    <TextView
        android:id="@+id/add_value_tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/add_value_spinner_category"
        android:layout_below="@id/add_value_et"
        android:text="@string/category"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/add_value_spinner_category"
        android:layout_below="@id/add_value_et"
        android:layout_alignParentEnd="true">
    </Spinner>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/add_value_tv_category"
        android:text="@string/button_date"
        android:onClick="showDatePickerDialog"
        android:id="@+id/add_value_button_date"/>

    <TextView
        android:layout_below="@id/add_value_spinner_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/add_value_button_date"
        android:id="@+id/add_value_tv_show_selected_date"/>

</RelativeLayout>
