<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instructions"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/botao1"
        android:hint="@string/edit_text_hint"
        android:id="@+id/value_to_add"
        android:inputType="numberDecimal"/>
    <Button
        android:id="@id/botao1"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="saveValue"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/choose_category"
        android:layout_below="@id/value_to_add"
        android:layout_alignParentEnd="true">
    </Spinner>
    
    <TextView
        android:layout_alignParentStart="true"
        android:layout_below="@id/choose_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/show_value_added"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/button_view"
        android:onClick="changeToWalletView"/>

</RelativeLayout>
